# nix-config

./: .gitignore  LICENSE  README.md  flake.nix  justfile
configs/home-manager/: beets.nix  common.nix  direnv.nix  dunst.nix  email.nix  feh.nix  ghostty.nix  gpg.nix  halloy-irc.nix  iamb-matrix.nix  kicad.nix  kitty.nix  mpd.nix  ntfy.nix  pass.nix  picom.nix  rofi.nix  secrets.nix  senpai-irc.nix  shpool.nix  sops.nix  ssh-agent.nix  starship.nix  tiny-irc.nix  yazi.nix  zk.nix  zsh.nix
configs/nixos/: bluetooth.nix  common.nix  copyparty.nix  cyberchef.nix  distrobox.nix  docker.nix  factorio-docker.nix  fail2ban.nix  forgejo.nix  freshrss.nix  graphical.nix  grocy.nix  homebox.nix  homepage.nix  immich.nix  interactive-networking.nix  jellyfin.nix  keyd.nix  kicad.nix  minecraft-docker.nix  miniserve-directory.nix  miniserve-static.nix  miniserve-tmp-upload.nix  nfsv2.nix  nginx-static.nix  nginx.nix  ntfy.nix  radicale.nix  secrets.nix  soju.nix  sound.nix  sshd.nix  syncthing.nix  tailscale.nix  touchpad.nix  wireless.nix
hosts/: boehm.nix  bohm.nix  gabe-archlaptop.nix  gabe-gv-workstation.nix  gabe-workstation.nix  home-laptop.nix  home-personal.nix  home-workstation.nix  non-nixos-server.nix  work-laptop-wsl.nix  work-laptop.nix  wsl-workstation.nix
hosts/archlaptop/: home.nix  (+2 more)
lib/: default.nix  net.nix
modules/: commonopts.nix  hostopts.nix
roles/: minimal-terminal.nix  terminal.nix
templates/: default.nix
templates/rust/: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml  treefmt.nix
terminal/: home.nix  starship.nix  voice.nix  zsh.nix
(+179 files in other folders)
