[package]
name = "TODO"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 0
strip = "symbols"
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = '3'
overflow-checks = false
